name:                baidupcs
version:             0.0.1
synopsis:            Bindings for Baidu PCS(Personal Cloud Storage).
homepage:            http://github.com/TerrorJack/baidupcs
license:             BSD3
license-file:        LICENSE
author:              Shao Cheng
maintainer:          astrohavoc@gmail.com
copyright:           2016 Shao Cheng
category:            Web
build-type:          Simple
cabal-version:       >=1.22

library
  hs-source-dirs:      src
  exposed-modules:     Web.Baidu.PCS
  default-language:    Haskell2010
  build-depends:       classy-prelude-conduit
                     , base16-bytestring
                     , cryptohash
                     , cryptohash-conduit
                     , disk-free-space
                     , http-client
                     , http-client-tls
                     , http-types
                     , SafeSemaphore
  ghc-options:         -Wall
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables

source-repository head
  type:     git
  location: https://github.com/TerrorJack/baidupcs
