name:                baidupcs
version:             0.0.1
synopsis:            Bindings for Baidu PCS(Personal Cloud Storage).
homepage:            http://github.com/TerrorJack/baidupcs
license:             BSD3
license-file:        LICENSE
author:              Shao Cheng
maintainer:          astrohavoc@gmail.com
copyright:           2016 Shao Cheng
category:            Web
build-type:          Simple
cabal-version:       >=1.22

flag build-test
  Description:         Build the test executable
  Default:             False

library
  hs-source-dirs:      src
  exposed-modules:     Web.Baidu.PCS
  default-language:    Haskell2010
  build-depends:       classy-prelude-conduit
                     , async
                     , base
                     , base16-bytestring
                     , cryptohash
                     , cryptohash-conduit
                     , directory
                     , disk-free-space
                     , http-client
                     , http-client-tls
                     , http-types
                     , SafeSemaphore
  ghc-options:         -Wall
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables

executable baidupcs-test
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  if flag(build-test)
      build-depends:       classy-prelude-conduit
                         , async
                         , baidupcs
                         , base
                         , base16-bytestring
                         , cryptohash
                         , cryptohash-conduit
                         , directory
                         , disk-free-space
                         , http-client
                         , http-client-tls
                         , http-types
                         , SafeSemaphore
  else
      buildable: False
  ghc-options:         -Wall -threaded -feager-blackholing -with-rtsopts=-N
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables

source-repository head
  type:     git
  location: https://github.com/TerrorJack/baidupcs
